# MCRMasters-BE

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  error.py  security.py
app/db/: session.py
app/models/: base_model.py  user.py
app/schemas/: auth_url_response.py  google_oauth.py  token_response.py
app/schemas/user/: user_create.py  user_login.py
app/services/auth/: google.py  user_service.py
app/util/: validators.py
migrations/: env.py
migrations/versions/: 0021b3e962de_add_user_model.py  bb602092201d_add_email_for_user_model.py  e26e5bd7685a_initial_migration.py  e59259ad00ac_initial_migration.py  f72f411d9180_initial_migration.py  f8992f42c998_add_user_status.py
tests/: conftest.py  test_db.py  test_google_login.py  test_main.py  test_user.py
tests/api/: test_google_login.py  test_main.py
tests/unit/: test_google_service.py
